<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="berthold.beamcalc.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/listRowBackground"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/check_show_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/show_result_on"></ImageButton>


        <ImageButton
            android:id="@+id/fold_unfold_data_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/baseline_keyboard_arrow_down_black_18dp"></ImageButton>

        <ImageButton
            android:id="@+id/add_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/check_show_result"
            android:layout_toRightOf="@+id/check_show_dimension"
            android:src="@drawable/add_load_icon" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lightGrey"></View>

    <ImageView
        android:id="@+id/result_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />


    <!-- This is a linear layout, containing the data input area and -->
    <!-- the load list. It is foldable.... -->

    <LinearLayout
        android:id="@+id/expandable_data_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <!-- Beam description -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrey"
            android:paddingLeft="10dp"
            android:text="@string/beam_definition_title_bar"
            android:textSize="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/length_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5">

                <EditText
                    android:id="@+id/beam_length"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/beam_length_hint"
                    android:inputType="numberSigned|numberDecimal"
                    android:paddingLeft="10dp"
                    android:textSize="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/left_support_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5">

                <EditText
                    android:id="@+id/left_support_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:hint="@string/beam_left_support_hint"
                    android:inputType="numberSigned|numberDecimal"
                    android:textSize="15dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/right_support_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5">
            <EditText
                android:id="@+id/right_support_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:hint="@string/beam_right_support_hint"
                android:inputType="numberSigned|numberDecimal"
                android:textSize="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!-- Load input -->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrey"
            android:paddingLeft="10dp"
            android:text="@string/beam_load_list_titelbar"
            android:textSize="15dp"
            android:textStyle="bold" />

        <!-- A RecyclerView with some commonly used attributes -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/beam_load_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:scrollbars="vertical"></androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</LinearLayout>
